--- a/src/main/resources/templates/views/product/action.html
+++ b/src/main/resources/templates/views/product/action.html
@@ -3,7 +3,7 @@
     layout:decorate="~{layout/admin}">
 
 <head>
-    <title>Action Categoyry</title>
+    <title>Action Product</title>
 </head>
 
 <body>
@@ -14,13 +14,13 @@
                 <div class="row mb-2">
                     <div class="col-sm-6">
                         <h1 class="m-0">
-                            <a href="/category">Categoyry</a>
+                            <a href="/product">Product</a>
                         </h1>
                     </div>
                     <!-- /.col -->
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Categoyry</a></li>
+                            <li class="breadcrumb-item"><a href="#">Product</a></li>
                             <li th:unless="${item.id==null}" class="breadcrumb-item active">Update</li>
                             <li th:if="${item.id==null}" class="breadcrumb-item active">Add</li>
                         </ol>
@@ -38,63 +38,76 @@
                 <div th:text="${message}" th:class="'alert alert-' + ${alert}">
                 </div>
             </div>
-            <!-- <form id="formSubmit" role="form" enctype="multipart/form-data" th:action="@{/category/action}"
-                th:object="${item}" method="post"> -->
-            <form id="formSubmit" role="form" th:action="@{/category/action}" enctype="multipart/form-data"
-                th:object="${item}" method="post">
+            <form id="formSubmit" role="form" th:action="@{/product/action}" th:object="${item}" method="POST"
+                enctype="multipart/form-data">
                 <div class="form-group">
-                    <label for="type">Enter Code Image</label>
-                    <input type="file" name="image" th:field="*{image}" id="image" accept="image/png, image/jpeg">
-                    <img width="100px" class="ml-2" th:src="@{/category/__${item.imageName}__}" alt="">
-                </div>
-                <!-- <div class="form-group">
-                    <label for="brand">Enter Brand Categoyry</label>
-                    <select name="brand" id="brand" class="form-control col-6">
-                        <option th:each="item : ${brand}" th:value="${item.id}" th:text="${item.name}">
+                    <label for="brandId">Choose Brand Product</label>
+                    <select name="brandId" id="brandId" class="form-control col-6">
+                        <option value="">---Choose Brand---</option>
+                        <option th:each="brand : ${brands}" th:value="${brand.id}" th:text="${brand.name}"
+                            th:selected="${item.brandId == brand.id}">
                         </option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="category">Enter Category Categoyry</label>
-                    <select name="category" id="category" class="form-control col-6">
-                        <option th:each="item : ${category}" th:value="${item.id}" th:text="${item.name}">
+                    <label for="categoryId">Choose Category Product</label>
+                    <select name="categoryId" id="categoryId" class="form-control col-6">
+                        <option value="">---Choose Category---</option>
+                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"
+                            th:selected="${item.categoryId == category.id}">
                         </option>
                     </select>
-                </div> -->
+                </div>
                 <div class="form-group">
-                    <label for="name">Enter Name Categoyry</label>
+                    <label for="name">Enter Name Product</label>
                     <input type="text" class="form-control col-6" name="name" id="name" th:field="*{name}">
-                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+                    <p class="alert-danger col-6" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+                    </p>
                 </div>
                 <div class="form-group">
-                    <label for="price">Enter Price Categoyry</label>
+                    <label for="image">Enter Image Product</label>
+                    <input type="file" class="form-control col-6" name="image" id="image" th:field="*{image}"
+                        accept="image/png, image/jpeg">
+                    <img width="100px" th:src="@{/upload-dir/product/__${item.imagePath}__}" id="thumbnail"
+                        alt="Logo Preview">
+                </div>
+                <div class="form-group">
+                    <label for="price">Enter Price Product</label>
                     <input type="text" class="form-control col-6" name="price" id="price" th:field="*{price}">
-                    <td th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="alert alert-danger"></td>
-
+                    <p class="alert-danger col-6" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">
+                    </p>
                 </div>
                 <div class="form-group">
-                    <label for="discount">Enter Discount Categoyry</label>
+                    <label for="discount">Enter Discount Product</label>
                     <input type="text" class="form-control col-6" name="discount" id="discount" th:field="*{discount}">
-                    <td th:if="${#fields.hasErrors('discount')}" th:errors="*{discount}" class="alert alert-danger">
-                    </td>
+                    <p class="alert-danger col-6" th:if="${#fields.hasErrors('discount')}" th:errors="*{discount}">
+                    </p>
                 </div>
                 <div class="form-group">
-                    <label for="sku">Enter Sku Categoyry</label>
+                    <label for="sku">Enter Sku Product</label>
                     <input type="text" class="form-control col-6" name="sku" id="sku" th:field="*{sku}">
-                    <td th:if="${#fields.hasErrors('sku')}" th:errors="*{sku}" class="alert alert-danger"></td>
+                    <p class="alert-danger col-6" th:if="${#fields.hasErrors('sku')}" th:errors="*{sku}">
+                    </p>
                 </div>
                 <div class="form-group">
-                    <label for="shortDescription">Enter Short Description Categoyry</label>
+                    <label for="content">Enter Short Description Product</label>
                     <div>
                         <textarea rows="" cols="" id="shortDescription" name="shortDescription"
-                            style="width: 100%; height: 300px" th:field="*{shortDescription}"></textarea>
+                            style="width: 100%; height: 100px" th:field="*{shortDescription}"></textarea>
+                        <p class="alert-danger col-6" th:if="${#fields.hasErrors('shortDescription')}"
+                            th:errors="*{shortDescription}">
+                        </p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="content">Enter Content Categoyry</label>
+                    <label for="content">Enter Content Product</label>
                     <div>
                         <textarea rows="" cols="" id="content" name="content" style="width: 100%; height: 300px"
                             th:field="*{content}"></textarea>
+                        <p class="alert-danger col-6" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
+                            Name
+                            Error
+                        </p>
                     </div>
                 </div>
                 <input type="hidden" name="id" id="id" th:field="*{id}">
@@ -117,68 +130,28 @@
                 .catch(error => {
                     console.error(error);
                 });
-            // $('#btnAddOrUpdate').click(function (e) {
-            //     e.preventDefault();
-            //     var data = {};
-            //     var formData = $('#formSubmit').serializeArray();
-            //     $.each(formData, function (i, v) {
-            //         data["" + v.name + ""] = v.value;
+            // ClassicEditor
+            //     .create(document.querySelector('#shortDescription'))
+            //     .then(editor => {
+            //         console.log('Editor was initialized', editor);
+            //         myContent = editor;
+            //     })
+            //     .catch(error => {
+            //         console.error(error);
             //     });
-            //     data['content'] = myContent.getData();
-            //     data['image'] = $('#image').val;
-            //     var id = $('#id').val();
-            //     if (id == "") {
-            //         add(data);
-            //     } else {
-            //         update(data);
-            //     }
-            // });
-
-            // function add(data) {
-            //     $.ajax({
-            //         url: '/api/category',
-            //         type: 'POST',
-            //         // enctype: 'multipart/form-data',
-            //         contentType: ('application/json', 'multipart/form-data'),
-            //         data: JSON.stringify(data),
-            //         dataType: 'json',
-            //         success: function (result) {
-            //             window.location.href = "/category?message=insert_success";
-            //         },
-            //         error: function (error) {
-            //             window.location.href = "/category/action?page=1&limit=2&message=error_system";
-            //         }
-            //     });
-            // }
-
-            // function update(data) {
-            //     $.ajax({
-            //         url: '/api/category',
-            //         type: 'PUT',
-            //         contentType: 'application/json',
-            //         data: JSON.stringify(data),
-            //         dataType: 'json',
-            //         success: function (result) {
-            //             window.location.href = "/category/action?id=" + result.id + "&message=update_success";
-            //         },
-            //         error: function (error) {
-            //             window.location.href = "/category/action?id=" + result.id + "&message=error_system";
-            //         }
-            //     });
-            // }
-            // $('#image').load(function (e) {
-            //     e.preventDefault();
-            //     var imageData = [[${ item.imageData }]];
-            //     let file = new File(imageData, fileName, { type: "image/png" });
-            //     let container = new DataTransfer();
-            //     container.items.add(file);
-            //     document.querySelector('#image').files = container.files;
-            // })
-            // var fileName = [[${ item.imageName }]];
-
-            // $('#image').text(fileName)
-            // $('#image').html(fileName);
-            // $('#image').val(fileName);
+            $(document).ready(function () {
+                $('#image').change(function () {
+                    showProductThumbnail(this);
+                });
+            })
+            function showProductThumbnail(fileInput) {
+                file = fileInput.files[0];
+                reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#thumbnail').attr('src', e.target.result);
+                };
+                reader.readAsDataURL(file);
+            }
         </script>
     </div>
 
